<resources>
    <string name="Chat">Chat</string>
    <string name="Chat_Agree">agree</string>
    <string name="Chat_Album_Permission_Get">Lack of reading system album permissions, click "Settings" - "permissions" grant application permissions</string>
    <string name="Chat_All_Image">Images</string>
    <string name="Chat_All_Image_Video">Images and Videos</string>
    <string name="Chat_All_Video">Videos</string>
    <string name="Chat_Funding">[Funding]</string>
    <string name="Chat_Group_chat">Group chat</string>
    <string name="Chat_Group_has_been_disbanded">%s Group has been disbanded</string>
    <string name="Chat_Have_agreed">Accepted</string>
    <string name="Chat_Have_refused">Refuse</string>
    <string name="Chat_Loc">location</string>
    <string name="Chat_Member_Max">%1$d/%2$d members</string>
    <string name="Chat_Msg_Undefine">Message is undefined</string>
    <string name="Chat_No_Pictures">No picture</string>
    <string name="Chat_Notice_New_Message">[You got a new message]</string>
    <string name="Chat_Photo_libary">Album</string>
    <string name="Chat_Preview_Num">preview(%1$d)</string>
    <string name="Chat_Select">Select</string>
    <string name="Chat_Select_Count">select(%1$d)</string>
    <string name="Chat_Select_Count_Max">select(%1$d/%2$d)</string>
    <string name="Chat_Send_Mulphoto">send%1$dphoto</string>
    <string name="Chat_Sharelink">[share link]</string>
    <string name="Chat_Source_QR">Share of the group of qr code</string>
    <string name="Chat_Transfer_Detail">Transfer Detail</string>
    <string name="Chat_Accept_success">Accept success</string>
    <string name="Chat_Add_as_a_friend_to_chat">Add as a friend to chat</string>
    <string name="Chat_Address">Address</string>
    <string name="Chat_Address_already_exists">Address already exists</string>
    <string name="Chat_Album">Photos</string>
    <string name="Chat_All_photos">All photos</string>
    <string name="Chat_Allow_Connect_to_access_your_album">Allow Connect to access your album from device menu: \'Setting\'->\'Privacy\'->\'album\'</string>
    <string name="Chat_Allow_Connect_to_access_your_microphone">Allow Connect to access your microphone from device menu: \'Setting\'->\'Privacy\'->\'Microphone\'</string>
    <string name="Chat_Announcement">[Announcement]</string>
    <string name="Chat_Audio">[Audio]</string>
    <string name="Chat_Back">Back</string>
    <string name="Chat_Best_luck">Best luck</string>
    <string name="Chat_Bitcoin_has_been_return_to_your_wallet">Bitcoin has been return to your wallet</string>
    <string name="Chat_Call">Call</string>
    <string name="Chat_Camera_Roll">Camera Roll</string>
    <string name="Chat_Chats">Chats</string>
    <string name="Chat_Choose_Members">Choose Members</string>
    <string name="Chat_Choose_contact">Choose contact</string>
    <string name="Chat_Complete">Complete</string>
    <string name="Chat_Compressing">Compressing...</string>
    <string name="Chat_Connect">Connect - P2P Encrypted Instant Message</string>
    <string name="Chat_Connecting">Connecting</string>
    <string name="Chat_Connection_protocol_upgrades">Connection protocol upgrades</string>
    <string name="Chat_Contact_card">Contact card</string>
    <string name="Chat_Create_a_new_chat">Create a new chat</string>
    <string name="Chat_Creating_group">Creating group...</string>
    <string name="Chat_Crowd_founding_in_progress">Crowd-founding in progress</string>
    <string name="Chat_Crowd_funding">Crowd-funding</string>
    <string name="Chat_Crowd_funding_by_who">By %s</string>
    <string name="Chat_Crowdfoundind_History">History</string>
    <string name="Link_Friend">Friend</string>
    <string name="Wallet_Confirm_transfer">Confirm transfer</string>
    <string name="Wallet_Transfer_details">Transfer details</string>
    <string name="Chat_Crowdfunding">Crowdfunding</string>
    <string name="Chat_Crowfunding">Create</string>
    <string name="Chat_Disable_self_destruct">Disable self-destruct</string>
    <string name="Chat_Draft">[Draft]</string>
    <string name="Chat_Enable_Self_destruct_Mode">Enable Self-destruct Mode</string>
    <string name="Chat_Encrypted">Encrypted</string>
    <string name="Chat_Enter_BTC">%1$s\n%2$s BTC</string>
    <string name="Chat_Expired">Expired %1$d/%2$d</string>
    <string name="Chat_Expression">[Expression]</string>
    <string name="Chat_Failed_to_get_redpact">Failed to get redpact</string>
    <string name="Chat_Failed_to_get_transfer">Failed to get transfer</string>
    <string name="Chat_Favorites">Favorites</string>
    <string name="Chat_Find_me_from_the_recommendation">Find me from the recommendation</string>
    <string name="Chat_Founded_complete">Founded complete</string>
    <string name="Chat_Group_Members">Members(%d)</string>
    <string name="Chat_Group_Namecard">[Group Namecard]</string>
    <string name="Chat_Group_certification">[Group certification]</string>
    <string name="Chat_Hide__messages_">Not show username or avatars,No message record</string>
    <string name="Chat_History">History</string>
    <string name="Chat_Hour">%d Hour</string>
    <string name="Chat_I_know">I know</string>
    <string name="Chat_Loading">Loading</string>
    <string name="Chat_Location">[Location]</string>
    <string name="Chat_Lucky_packet_Overtime">Lucky packet Overtime!</string>
    <string name="Chat_Lucky_packet_transfering_to_your_wallet">Lucky packet transfering to your wallet</string>
    <string name="Chat_Message_not_parse_upgrade_version">Message can\'t parse, please upgrade the latest version</string>
    <string name="Chat_Message_retweet">Message retweet</string>
    <string name="Chat_Minute">%d Min</string>
    <string name="Chat_Mute_Notification">Mute Notification</string>
    <string name="Chat_My_Photo_Stream">My Photo Stream</string>
    <string name="Chat_Name_Card">Name Card</string>
    <string name="Chat_Network_connection_failed_please_check_network">Network connection failed, please check network</string>
    <string name="Chat_New_application">New application</string>
    <string name="Chat_New_message_notification">New message notification</string>
    <string name="Chat_Not_Group_Master">You are not the group adminer</string>
    <string name="Chat_Not_connected">Not connected</string>
    <string name="Chat_Original">Original</string>
    <string name="Chat_Panoramas">Panoramas</string>
    <string name="Chat_Per_BTC">%1$s per\n%2$s BTC</string>
    <string name="Chat_Photo">Photo</string>
    <string name="Chat_Picture">[Picture]</string>
    <string name="Chat_Preview">Preview</string>
    <string name="Chat_Read_Burn">Read &amp; Burn</string>
    <string name="Chat_Recent_Added">Recent Added</string>
    <string name="Chat_Recent_chat">Recent chat</string>
    <string name="Chat_Record_time_too_long">Record time too long</string>
    <string name="Chat_Record_time_too_short">Record time too short</string>
    <string name="Chat_Red_packet">[Lucky packet]</string>
    <string name="Chat_Refreshing_Secret_Key">Refreshing Secret Key...</string>
    <string name="Chat_Release_to_cancel">Release to cancel</string>
    <string name="Chat_Resend_this_message">Resend this message?</string>
    <string name="Chat_Retweet">Retweet</string>
    <string name="Chat_Screen_Shots">Screen Shots</string>
    <string name="Chat_Seconds">%d Seconds</string>
    <string name="Chat_Secret_Key_Refreshed">Secret Key Refreshed</string>
    <string name="Chat_Send_a_Luck_Packet_Click_to_view">Send Lucky Packet\nClick to view</string>
    <string name="Chat_Send_a_namecard">Send a namecard</string>
    <string name="Chat_Send_contact_card_to_the_current_chat">Send %s to current chat</string>
    <string name="Chat_Send_image_to">Send image to%s</string>
    <string name="Chat_Send_video_to">Send video to%s</string>
    <string name="Chat_Send_vioce">Send vioce</string>
    <string name="Chat_Set_success">Set success</string>
    <string name="Chat_Share_contact">Share the Contact Card</string>
    <string name="Chat_Share_contact_to">Share %1$s to %2$s</string>
    <string name="Chat_Sight">Sight</string>
    <string name="Chat_Slide_left_to_cancel">Slide left to cancel</string>
    <string name="Chat_Snapchat">[Snapchat]</string>
    <string name="Chat_Someone_note_me">[Someone @ me]</string>
    <string name="Chat_Sticky_on_Top">Sticky on Top</string>
    <string name="Chat_Sticky_on_Top_chat">Sticky on Top chat</string>
    <string name="Chat_The_day_before_yesterday">The day before yesterday</string>
    <string name="Chat_The_private_key_failed_to_updated._Your_message_will_be_encrypted_by_temporary_ECDH_key">The private key failed to updated. Your message will be encrypted by fixed ECDH key</string>
    <string name="Chat_Tips">[Tips message]</string>
    <string name="Chat_Today">Today %s</string>
    <string name="Chat_Transfer">[Transfer]</string>
    <string name="Chat_Transfer_to_other_BTC">Transfer to other \n%s BTC</string>
    <string name="Chat_Transfer_to_you_BTC">Transfer to you \n%s BTC</string>
    <string name="Chat_Unable_to_record">Unable to record</string>
    <string name="Chat_Unencrypted">Unencrypted</string>
    <string name="Chat_Unkonw_message">[Unkonw message]</string>
    <string name="Chat_Unpaid">Unpaid</string>
    <string name="Chat_Update_Database">Update Database</string>
    <string name="Chat_Updating_Database">Updating Database</string>
    <string name="Chat_User_already_in_group">User already in group</string>
    <string name="Chat_VerifyCode_has_expired">VerifyCode has expired</string>
    <string name="Chat_Video">[Video]</string>
    <string name="Chat_Video_compress_size_Are_yousend">Video compress size:%s,Are you sure send this video?</string>
    <string name="Chat_Video_preview">Video preview</string>
    <string name="Chat_Videos">Videos</string>
    <string name="Chat_Visting_card">[Visting card]</string>
    <string name="Chat_Waitting_for_open">Waitting for open</string>
    <string name="Common_OK">OK</string>
    <string name="Link_Clear_All_Chat_History">Clear All Chat History</string>
    <string name="Login_Decrypted_private_key">Private key</string>
    <string name="Login_Next">Next</string>
    <string name="Login_export_encrypted_prikey_explain_Set_Account_Security">This is the your private key encrypted by password\nYou can export to your Photos or Email.\nYou can scan this for login from other devices.You can also tap yo the Setting - Account &amp; Security for backup sonn.</string>
    <string name="Set_Backup_encrypted_private_key">Backup encrypted private key</string>
    <string name="Set_Currency">Currency</string>
    <string name="Set_Enable_or_disable_Connect_Notification_via">Enable or disable Connect Notification via “Setting”->”Notification” on your phone</string>
    <string name="Set_Enter_New_Mobile_Number">Enter New Mobile Number</string>
    <string name="Set_Id_address">ID &amp; bitcoin address</string>
    <string name="Set_Language">Language</string>
    <string name="Set_Name">Name</string>
    <string name="Set_Sound">Sound</string>
    <string name="Set_Vibrate">Vibrate</string>
    <string name="Set_Your_Phone">Your Phone</string>
    <string name="Set_you_can_login_mobile_number_link_one_account">After changing, you can login with new number\n one mobile number can only be linked to one account</string>
    <string name="Wallet_Fee_BTC">Fee: %3.8f BTC</string>
    <string name="Wallet_Pay_Faied">Pay Failed</string>
    <string name="Wallet_Payment_Password_is_incorrect">Payment Password is incorrect</string>
    <string name="Wallet_Retry">Retry</string>
    <string name="Wallet_Transaction_detail">Transaction detail</string>
    <string name="Wallet_Transfer_To_User">Transfer to %s</string>
    <string name="app_name">Connect</string>
    <string name="app_name_im">CONNECT.IM</string>
</resources>