<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_f0f0f6"
    android:fitsSystemWindows="true">

    <connect.widget.TopToolBar
        android:id="@id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/language_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_list_item_bg"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            style="@style/BaseTextStyle.16"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_52"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Set_Language"/>

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/group_item_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/currency_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_list_item_bg"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:visibility="gone">

        <TextView
            style="@style/BaseTextStyle.16"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_52"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Set_Currency"
            android:id="@+id/textView4" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/group_item_arrow"/>
    </LinearLayout>

    <TextView
        style="@style/BaseTextStyle"
        android:textColor="@color/color_858998"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_2"
        android:text="@string/Chat_New_message_notification"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:background="@drawable/selector_list_item_bg"
        android:orientation="horizontal"

        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">
        <TextView
            style="@style/BaseTextStyle.16"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Set_Sound" />
        <View
            android:id="@+id/sound_tb"
            style="@style/BtnSwitchStyle"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff">
        <View
            style="@style/BaseViewLine.eeeeee"
            android:layout_marginLeft="@dimen/dp_15"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:background="@drawable/selector_list_item_bg"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">
        <TextView
            style="@style/BaseTextStyle.16"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Set_Vibrate" />
        <View
            android:id="@+id/vibrate_tb"
            style="@style/BtnSwitchStyle"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        style="@style/BaseTextStyle"
        android:textColor="@color/color_858998"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/Set_Enable_or_disable_Connect_Notification_via"/>

    <TextView
        android:id="@+id/clear_chat_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/selector_list_item_bg"
        android:gravity="center"
        android:text="@string/Link_Clear_All_Chat_History"
        android:textColor="@color/color_f53333"
        android:textSize="@dimen/sp_16"/>

</LinearLayout>