<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white">

    <connect.widget.TopToolBar
        android:id="@id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/BaseTextStyle.16"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/Set_Enter_New_Mobile_Number"/>

    <RelativeLayout
        android:id="@+id/country_rela"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:background="@drawable/selector_list_item_bg">
        <TextView
            android:id="@+id/country_tv"
            style="@style/BaseTextStyle.16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text=""/>
        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/group_item_arrow"/>
    </RelativeLayout>
    <View
        style="@style/BaseViewLine.d1d5da"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"/>

    <EditText
        android:id="@id/phone_et"
        style="@style/EditStyle"
        android:layout_height="@dimen/dp_40"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_10"
        android:inputType="phone"
        android:hint="@string/Set_Your_Phone"
        android:text=""/>
    <View
        style="@style/BaseViewLine.d1d5da"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"/>

    <Button
        android:id="@id/next_btn"
        style="@style/ButtonLongStyle"
        android:layout_marginTop="@dimen/dp_15"
        android:enabled="false"
        android:text="@string/Login_Next"/>

    <TextView
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/Set_you_can_login_mobile_number_link_one_account"/>

</LinearLayout>