<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top_title_rela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/top_img"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dp_15"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:visibility="invisible"
            android:src="@mipmap/back_gray"/>
        <TextView
            style="@style/BaseTextStyle.16"
            android:layout_margin="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:layout_centerInParent="true"
            android:text="@string/Wallet_Pay_Faied"/>
        <TextView
            style="@style/BaseViewLine.d1d5da"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@+id/top_img"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_title_rela"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/retry_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:padding="@dimen/dp_10"
            android:text="@string/Wallet_Retry"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_18"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/Wallet_Payment_Password_is_incorrect"
            android:textSize="@dimen/sp_16"/>

    </LinearLayout>

</RelativeLayout>