<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <connect.view.TopToolBar
            android:id="@id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <connect.view.HightEqWidthImage
            android:id="@+id/backup_img"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_40"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_767a82"
            android:text="@string/Login_Decrypted_private_key"/>

        <TextView
            style="@style/BaseTextStyle.14"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/Login_export_encrypted_prikey_explain_Set_Account_Security"/>
    </LinearLayout>


    <TextView
        android:id="@+id/backup_private_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:textColor="@color/color_007aff"
        android:text="@string/Set_Backup_encrypted_private_key"/>

    <Button
        style="@style/ButtonLongStyle"
        android:id="@id/next_btn"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_35"
        android:text="@string/Login_Next"/>

</RelativeLayout>