<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f0f0f6"
    android:padding="@dimen/dp_30">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo_black_middle"
        android:id="@+id/imageView2" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/scan_imag"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_200"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_50"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_767a82" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_767a82"
        android:text="@string/Set_Name"/>
    <TextView
        android:id="@id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_767a82" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_767a82"
        android:text="@string/Set_Id_address"/>
    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_767a82" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/sp_16"
        android:text="@string/app_name_im"
        android:textColor="@color/color_767a82" />

</LinearLayout>